--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "source/cereal"]
 	path = source/cereal
-	url = https://github.com/USCiLab/cereal.git
-[submodule "pybind11"]
-	path = pybind11
-	url = https://github.com/pybind/pybind11.git
+	url = https://github.com/jrmadsen/cereal.git
 [submodule "source/python/pybind11"]
 	path = source/python/pybind11
 	url = https://github.com/pybind/pybind11.git
