--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
-################################################################################
-#   cmake settings
-#
-cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
+##########################################################################################
+#       CMake settings
+##########################################################################################
+
+cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
 
 if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
     set(MSG "")
@@ -14,18 +15,20 @@ endif()
 cmake_policy(SET CMP0048 NEW)
 cmake_policy(SET CMP0042 NEW)
 
-################################################################################
-#   version
-#
+#----------------------------------------------------------------------------------------#
+#   versioning
+#----------------------------------------------------------------------------------------#
+
 file(READ "${CMAKE_CURRENT_LIST_DIR}/VERSION" VERSION_STRING LIMIT_COUNT 1)
 string(REGEX REPLACE "(\n|\r)" "" VERSION_STRING "${VERSION_STRING}")
 string(REGEX REPLACE "[A-Za-z].*" "" VERSION_STRING "${VERSION_STRING}")
 set(TIMEMORY_VERSION "${VERSION_STRING}" CACHE STRING "Version of TiMemory project" FORCE)
 message(STATUS "TiMemory version ${TIMEMORY_VERSION}")
 
-################################################################################
+#----------------------------------------------------------------------------------------#
 #   project
-#
+#----------------------------------------------------------------------------------------#
+
 project(TiMemory LANGUAGES C CXX VERSION ${TIMEMORY_VERSION})
 
 # Check if project is being used directly or via add_subdirectory
@@ -53,7 +56,9 @@ endif()
 
 set(CMAKE_DIRECTORY_LABELS "${PROJECT_NAME}")
 
-################################################################################
+#----------------------------------------------------------------------------------------#
+#   configuration
+#----------------------------------------------------------------------------------------#
 
 include(MacroUtilities)
 include(Options)
@@ -64,21 +69,21 @@ include(BuildSettings)
 include(Packages)
 include(ClangFormat)
 
-################################################################################
+#----------------------------------------------------------------------------------------#
 #   TiMemory source
-################################################################################
+#----------------------------------------------------------------------------------------#
 
 add_subdirectory(source)
 
-################################################################################
+#----------------------------------------------------------------------------------------#
 #   Package setup
-################################################################################
+#----------------------------------------------------------------------------------------#
 
 include(PackageConfigure)
 
-################################################################################
+#----------------------------------------------------------------------------------------#
 #   Examples and Testing
-################################################################################
+#----------------------------------------------------------------------------------------#
 
 set(TiMemory_DIR "${CMAKE_BINARY_DIR}" CACHE STRING "TiMemory install directory" FORCE)
 add_subdirectory(examples)
