--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,62 +1,32 @@
 
 include(CMakeParseArguments)
-list(APPEND ${PROJECT_NAME}_TARGET_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}
-    ${CMAKE_CURRENT_LIST_DIR}/cereal/include)
 
-################################################################################
-#
-#        Cereal
-#
-################################################################################
 
-set(DEV_WARNINGS ${CMAKE_SUPPRESS_DEVELOPER_WARNINGS})
-# this gets annoying
-set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS ON CACHE BOOL
-    "Suppress Warnings that are meant for the author of the CMakeLists.txt files"
-    FORCE)
-
-# add cereal
-if(NOT TIMEMORY_SETUP_PY OR TIMEMORY_DEVELOPER_INSTALL)
-    add_subdirectory(cereal)
-endif()
-
-set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS ${DEV_WARNINGS} CACHE BOOL
-    "Suppress Warnings that are meant for the author of the CMakeLists.txt files"
-    FORCE)
-
-file(GLOB_RECURSE cereal_headers ${CMAKE_CURRENT_LIST_DIR}/cereal/include/*.hpp)
-
-################################################################################
-#
-#        TiMemory (C++)
-#
-################################################################################
-
-#------------------------------------------------------------------------------#
+#----------------------------------------------------------------------------------------#
 # Locate sources and headers for this project
 # - headers are included so they will show up in IDEs
+#
 file(GLOB c_headers ${CMAKE_CURRENT_LIST_DIR}/timemory/*.h)
 file(GLOB c_sources ctimemory.c)
 file(GLOB cxx_headers ${CMAKE_CURRENT_LIST_DIR}/timemory/*.hpp)
 file(GLOB cxx_headers_impl ${CMAKE_CURRENT_LIST_DIR}/timemory/impl/*.icpp)
 file(GLOB cxx_sources ctimemory.cpp)
+file(GLOB_RECURSE cereal_headers ${CMAKE_CURRENT_LIST_DIR}/cereal/include/*.hpp)
 # this is only needed for windows
 file(GLOB pyheaders ${CMAKE_CURRENT_LIST_DIR}/python/*.hpp)
 file(GLOB pysources ${CMAKE_CURRENT_LIST_DIR}/python/*.cpp)
 
-# libraries to install
-set(INSTALL_LIBRARIES )
 
-#------------------------------------------------------------------------------#
+#----------------------------------------------------------------------------------------#
 # this includes compile definitions for headers
 #
 add_subdirectory(timemory)
 
 
-#------------------------------------------------------------------------------#
+#----------------------------------------------------------------------------------------#
 # build library setup
 #
-set(_OUTPUT_DIR )
+set(_OUTPUT_DIR ${PROJECT_BINARY_DIR}/timemory/lib)
 # directly compile sources
 set(C_LIBRARY_SOURCES   ${c_sources}   ${c_headers})
 set(CXX_LIBRARY_SOURCES ${cxx_sources} ${cxx_headers} ${cxx_headers_impl} ${cereal_headers})
@@ -71,53 +41,28 @@ if(WIN32)
     endif()
 
     # Set source file compile definitions
-    set_source_files_properties(
-        ${c_sources} ${CXX_LIBRARY_SOURCES}
+    set_source_files_properties(${c_sources} ${cxx_sources}
         PROPERTIES COMPILE_DEFINITIONS ${PRIVATE_COMPILE_DEFINITIONS})
 elseif(XCODE)
     set(_OUTPUT_DIR ${PROJECT_BINARY_DIR})
-else()
-    set(_OUTPUT_DIR ${PROJECT_BINARY_DIR}/timemory/lib)
 endif()
 
 
 
-#------------------------------------------------------------------------------#
+#----------------------------------------------------------------------------------------#
 # build the C++ libraries
 #
-
-if(XCODE)
-    set(CXX_OBJECT_SOURCES ${CXX_LIBRARY_SOURCES})
-else()
-    build_library(
-        PIC
-        TYPE                OBJECT
-        TARGET_NAME         ${LIBNAME}-cxx-library-object
-        OUTPUT_NAME         ${LIBNAME}
-        LANGUAGE            CXX
-        LINKER_LANGUAGE     CXX
-        OUTPUT_DIR          ${_OUTPUT_DIR} # ignored on Windows
-        COMPILE_DEFINITIONS ${${PROJECT_NAME}_DEFINITIONS}
-        SOURCES             ${CXX_LIBRARY_SOURCES}
-        LINK_LIBRARIES      ${EXTERNAL_LIBRARIES}
-        INCLUDE_DIRECTORIES ${${PROJECT_NAME}_TARGET_INCLUDE_DIRS})
-    set(CXX_OBJECT_SOURCES $<TARGET_OBJECTS:${LIBNAME}-cxx-library-object>)
-endif()
 
 build_library(
     PIC
     TYPE                SHARED
-    TARGET_NAME         ${LIBNAME}-cxx-library
+    TARGET_NAME         ${LIBNAME}-cxx-library-shared
     OUTPUT_NAME         ${LIBNAME}
     LANGUAGE            CXX
     LINKER_LANGUAGE     CXX
     OUTPUT_DIR          ${_OUTPUT_DIR} # ignored on Windows
-    COMPILE_DEFINITIONS ${${PROJECT_NAME}_DEFINITIONS}
-    SOURCES             ${CXX_OBJECT_SOURCES}
-    LINK_LIBRARIES      ${EXTERNAL_LIBRARIES}
-    INCLUDE_DIRECTORIES ${${PROJECT_NAME}_TARGET_INCLUDE_DIRS})
-
-add_library(${LIBNAME}-cxx-library-shared ALIAS ${LIBNAME}-cxx-library)
+    SOURCES             ${CXX_LIBRARY_SOURCES}
+    LINK_LIBRARIES      ${EXTERNAL_LIBRARIES})
 
 build_library(
     PIC
@@ -127,13 +72,26 @@ build_library(
     LANGUAGE            CXX
     LINKER_LANGUAGE     CXX
     OUTPUT_DIR          ${_OUTPUT_DIR} # ignored on Windows
-    COMPILE_DEFINITIONS ${${PROJECT_NAME}_DEFINITIONS}
-    SOURCES             ${CXX_OBJECT_SOURCES}
-    LINK_LIBRARIES      ${EXTERNAL_LIBRARIES}
-    INCLUDE_DIRECTORIES ${${PROJECT_NAME}_TARGET_INCLUDE_DIRS})
+    SOURCES             ${CXX_LIBRARY_SOURCES}
+    LINK_LIBRARIES      ${EXTERNAL_LIBRARIES})
 
+add_library(${LIBNAME}-cxx-library INTERFACE)
+target_link_libraries(${LIBNAME}-cxx-library INTERFACE ${LIBNAME}-cxx-library-shared)
+list(APPEND INSTALL_LIBRARIES ${LIBNAME}-cxx-library)
 
-#------------------------------------------------------------------------------#
+target_link_libraries(timemory-extern-templates INTERFACE timemory-cxx-library)
+target_link_libraries(timemory-shared-extern-templates INTERFACE timemory-cxx-library-shared)
+target_link_libraries(timemory-static-extern-templates INTERFACE timemory-cxx-library-static)
+
+if(TIMEMORY_BUILD_EXTERN_TEMPLATES)
+    target_compile_definitions(${LIBNAME}-cxx-library-shared    PRIVATE     TIMEMORY_BUILD_EXTERN_TEMPLATES)
+    target_compile_definitions(${LIBNAME}-cxx-library-static    PRIVATE     TIMEMORY_BUILD_EXTERN_TEMPLATES)
+    target_compile_definitions(timemory-extern-templates        INTERFACE   TIMEMORY_EXTERN_TEMPLATES)
+    target_compile_definitions(timemory-shared-extern-templates INTERFACE   TIMEMORY_EXTERN_TEMPLATES)
+    target_compile_definitions(timemory-static-extern-templates INTERFACE   TIMEMORY_EXTERN_TEMPLATES)
+endif()
+
+#----------------------------------------------------------------------------------------#
 # build the C libraries
 #
 if(TIMEMORY_BUILD_C)
@@ -149,10 +107,8 @@ if(TIMEMORY_BUILD_C)
             LANGUAGE            C
             LINKER_LANGUAGE     CXX
             OUTPUT_DIR          ${_OUTPUT_DIR} # ignored on Windows
-            COMPILE_DEFINITIONS ${${PROJECT_NAME}_DEFINITIONS}
             SOURCES             ${C_LIBRARY_SOURCES}
-            LINK_LIBRARIES      ${LIBNAME}-cxx-library
-            INCLUDE_DIRECTORIES ${${PROJECT_NAME}_TARGET_INCLUDE_DIRS})
+            LINK_LIBRARIES      ${LIBNAME}-cxx-library-shared timemory-cereal)
 
         set(C_OBJECT_SOURCES   $<TARGET_OBJECTS:${LIBNAME}-c-library-object>)
     endif()
@@ -160,17 +116,13 @@ if(TIMEMORY_BUILD_C)
     build_library(
         PIC
         TYPE                SHARED
-        TARGET_NAME         ${LIBNAME}-c-library
+        TARGET_NAME         ${LIBNAME}-c-library-shared
         OUTPUT_NAME         c${LIBNAME}
         LANGUAGE            C
         LINKER_LANGUAGE     CXX
         OUTPUT_DIR          ${_OUTPUT_DIR} # ignored on Windows
-        COMPILE_DEFINITIONS ${${PROJECT_NAME}_DEFINITIONS}
         SOURCES             ${C_OBJECT_SOURCES}
-        LINK_LIBRARIES      ${LIBNAME}-cxx-library
-        INCLUDE_DIRECTORIES ${${PROJECT_NAME}_TARGET_INCLUDE_DIRS})
-
-    add_library(${LIBNAME}-c-library-shared ALIAS ${LIBNAME}-c-library)
+        LINK_LIBRARIES      ${LIBNAME}-cxx-library-shared)
 
     build_library(
         PIC
@@ -180,14 +132,17 @@ if(TIMEMORY_BUILD_C)
         LANGUAGE            C
         LINKER_LANGUAGE     CXX
         OUTPUT_DIR          ${_OUTPUT_DIR} # ignored on Windows
-        COMPILE_DEFINITIONS ${${PROJECT_NAME}_DEFINITIONS}
         SOURCES             ${C_OBJECT_SOURCES}
-        LINK_LIBRARIES      ${LIBNAME}-cxx-library-static
-        INCLUDE_DIRECTORIES ${${PROJECT_NAME}_TARGET_INCLUDE_DIRS})
+        LINK_LIBRARIES      ${LIBNAME}-cxx-library-static)
+
+    add_library(${LIBNAME}-c-library INTERFACE)
+    target_link_libraries(${LIBNAME}-c-library INTERFACE ${LIBNAME}-c-library-shared)
+    list(APPEND INSTALL_LIBRARIES ${LIBNAME}-c-library)
+
 endif()
 
 
-#------------------------------------------------------------------------------#
+#----------------------------------------------------------------------------------------#
 # Install the targets and export
 #
 
@@ -215,13 +170,13 @@ export(TARGETS ${INSTALL_LIBRARIES}
     FILE ${CMAKE_BINARY_DIR}/TiMemoryBuild.cmake)
 
 
-#------------------------------------------------------------------------------#
+#----------------------------------------------------------------------------------------#
 # timem wrapper tool
 #
 add_subdirectory(tools)
 
 
-#------------------------------------------------------------------------------#
+#----------------------------------------------------------------------------------------#
 # Python bindings
 #
 if(TIMEMORY_BUILD_PYTHON)
@@ -238,18 +193,20 @@ if(TIMEMORY_BUILD_PYTHON)
 endif()
 
 
-#------------------------------------------------------------------------------#
+#----------------------------------------------------------------------------------------#
 # install the plotting.py module as a Python executable
 # named 'timemory-plotter' as C++ JSON outputs can use this
 # to generate plots
 #
-configure_file(${PROJECT_SOURCE_DIR}/timemory/plotting/__main__.py
-    ${PROJECT_BINARY_DIR}/timemory-plotter @ONLY)
+if(TIMEMORY_BUILD_PYTHON)
+    configure_file(${PROJECT_SOURCE_DIR}/timemory/plotting/__main__.py
+        ${PROJECT_BINARY_DIR}/timemory-plotter @ONLY)
 
-install(FILES ${PROJECT_BINARY_DIR}/timemory-plotter
-    DESTINATION ${TIMEMORY_INSTALL_BINDIR}
-    COMPONENT development
-    PERMISSIONS
-    OWNER_EXECUTE OWNER_READ OWNER_WRITE
-    GROUP_EXECUTE GROUP_READ
-    WORLD_EXECUTE WORLD_READ)
+    install(FILES ${PROJECT_BINARY_DIR}/timemory-plotter
+        DESTINATION ${TIMEMORY_INSTALL_BINDIR}
+        COMPONENT development
+        PERMISSIONS
+        OWNER_EXECUTE OWNER_READ OWNER_WRITE
+        GROUP_EXECUTE GROUP_READ
+        WORLD_EXECUTE WORLD_READ)
+endif()
