--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -75,7 +75,6 @@ install:
         $env:TIMEMORY_USE_MPI = "OFF"
       }
       conda update -y -q -n base conda
-      conda config --add channels jrmadsen
       conda config --add channels conda-forge
       conda install -y -q pip setuptools scikit-build numpy matplotlib pillow pyctest
     }
@@ -112,6 +111,7 @@ build_script:
     .. -G "%CMAKE_GENERATOR%" -A "%CMAKE_ARCH%"
 - set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmake --build . --config "%CONFIG%" --target ALL_BUILD -- /m /v:m /logger:%MSBuildLogger%
+- cmake --build . --config "%CONFIG%" --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
 - ls
-- ./outputs/runtime/%CONFIG%/test_cxx_overhead.exe
-- ./outputs/runtime/%CONFIG%/test_cxx_tuple.exe
+- .\outputs\runtime\%CONFIG%\test_cxx_overhead.exe
+- .\outputs\runtime\%CONFIG%\test_cxx_tuple.exe
