Fixed gperf + coverage interface + heap profiling + interface compile options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ if(SKBUILD)
 endif()
 
 set(CMAKE_DIRECTORY_LABELS "${PROJECT_NAME}")
+set(LIBNAME timemory)
 
 #----------------------------------------------------------------------------------------#
 #   configuration
