--- a/examples/ex-cxx-overhead/CMakeLists.txt
+++ b/examples/ex-cxx-overhead/CMakeLists.txt
@@ -12,21 +12,13 @@ find_package(TiMemory REQUIRED)
 
 add_executable(${EXE_NAME} ${EXE_NAME}.cpp)
 
-target_link_libraries(${EXE_NAME} timemory-cxx-library)
-
-target_compile_options(${EXE_NAME} PRIVATE
-    $<$<COMPILE_LANGUAGE:C>:${TiMemory_C_COMPILE_OPTIONS}>
-    $<$<COMPILE_LANGUAGE:CXX>:${TiMemory_CXX_COMPILE_OPTIONS}>)
+target_link_libraries(${EXE_NAME} timemory-cxx-library timemory-cxx-compile-options)
 
 option(USE_EXTERN_TEMPLATES "Enable extern templates" OFF)
 if(USE_EXTERN_TEMPLATES)
     message(STATUS "Using extern templates from TiMemory...")
     target_link_libraries(${EXE_NAME} timemory-extern-templates)
 endif()
-
-foreach(_OPT ${TiMemory_CXX_LINK_OPTIONS})
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${_OPT}")
-endforeach()
 
 if(NOT DEFINED TIMEMORY_SETUP_PY OR NOT TIMEMORY_SETUP_PY)
     install(TARGETS ${EXE_NAME} DESTINATION bin)
