--- a/.travis.yml
+++ b/.travis.yml
@@ -8,108 +8,6 @@ matrix:
   include:
     # ------------------------------------------------------------------------ #
     #
-    #   Python 2.7
-    #
-    # ------------------------------------------------------------------------ #
-    # GCC 5
-    - os: linux
-      dist: xenial
-      sudo: false
-      python: '2.7'
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - gcc-5
-            - g++-5
-            - build-essential
-            - libopenmpi-dev
-            - openmpi-bin
-            - libpapi-dev
-            - papi-tools
-      env:
-        - MATRIX_EVAL="CC=$(which gcc-5) && CXX=$(which g++-5) && BUILD_TYPE=MinSizeRel"
-    # GCC 6
-    - os: linux
-      dist: xenial
-      sudo: false
-      python: '2.7'
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - gcc-6
-            - g++-6
-            - build-essential
-            - libopenmpi-dev
-            - openmpi-bin
-            - libpapi-dev
-            - papi-tools
-      env:
-        - MATRIX_EVAL="CC=$(which gcc-6) && CXX=$(which g++-6) && BUILD_TYPE=RelWithDebInfo"
-    # GCC 7
-    - os: linux
-      dist: xenial
-      sudo: false
-      python: '2.7'
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - gcc-7
-            - g++-7
-            - build-essential
-            - libopenmpi-dev
-            - openmpi-bin
-            - libpapi-dev
-            - papi-tools
-      env:
-        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && BUILD_TYPE=Release"
-    # Clang 4.0
-    - os: linux
-      dist: xenial
-      sudo: false
-      python: '2.7'
-      addons:
-        apt:
-          sources:
-            - llvm-toolchain-xenial-4.0
-            - ubuntu-toolchain-r-test
-          packages:
-            - clang-4.0
-            - clang++-4.0
-            - build-essential
-            - libmpich-dev
-            - mpich
-            - libpapi-dev
-            - papi-tools
-      env:
-        - MATRIX_EVAL="CC=$(which clang-4.0) && CXX=$(which clang++-4.0) && BUILD_TYPE=Debug"
-    # Clang 5.0
-    - os: linux
-      dist: xenial
-      sudo: false
-      python: '2.7'
-      addons:
-        apt:
-          sources:
-            - llvm-toolchain-xenial-5.0
-            - ubuntu-toolchain-r-test
-          packages:
-            - clang-5.0
-            - clang++-5.0
-            - build-essential
-            - libmpich-dev
-            - mpich
-            - libpapi-dev
-            - papi-tools
-      env:
-        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_TYPE=MinSizeRel"
-    # ------------------------------------------------------------------------ #
-    #
     #   Python 3.6
     #
     # ------------------------------------------------------------------------ #
@@ -333,23 +231,16 @@ before_install:
 install:
     - eval "${MATRIX_EVAL}"
     - env
-    - conda create -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake
+    - conda create -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake gperftools
     - source activate pyctest
     - export ARGS="-SF --pyctest-model=Continuous --pyctest-site=Travis"
     - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=RelWithDebInfo ; fi
     - if [ -z "${USE_MPI}" ]; then ARGS="${ARGS} --no-mpi"; fi
-    - python ./pyctest-runner.py ${ARGS} --coverage --pyctest-build-type=Debug
-    - rm -rf build-timemory
     - python ./pyctest-runner.py ${ARGS} --pyctest-build-type=${BUILD_TYPE}
-    - rm -rf build-timemory
-    - python setup.py install
+    - python ./pyctest-runner.py ${ARGS} --pyctest-build-type=RelWithDebInfo --profile=cpu
+    - python ./pyctest-runner.py ${ARGS} --pyctest-build-type=RelWithDebInfo --profile=heap
+    - python ./pyctest-runner.py ${ARGS} --pyctest-build-type=Debug          --coverage
 
 script:
-    #
-    # Python testing
-    #
-    #- mkdir -p ${HOME}/timemory-test
-    # go to empty directory for testing
-    #- cd ${HOME}/timemory-test
-    #- python${TRAVIS_PYTHON_VERSION} -c "import timemory ; timemory.tests.run()"
+    - python setup.py install
     - echo "python${TRAVIS_PYTHON_VERSION} testing -- Done"
