--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -22,11 +22,6 @@ set(@PROJECT_NAME@_CXX_COMPILE_OPTIONS @PROJECT_CXX_COMPILE_OPTIONS@)
 set(@PROJECT_NAME@_CUDA_COMPILE_OPTIONS @PROJECT_CUDA_COMPILE_OPTIONS@)
 set(@PROJECT_NAME@_BUILD_TYPE @CMAKE_BUILD_TYPE@)
 
-# link options
-set(@PROJECT_NAME@_C_LINK_OPTIONS @PROJECT_C_LINK_OPTIONS@)
-set(@PROJECT_NAME@_CXX_LINK_OPTIONS @PROJECT_CXX_LINK_OPTIONS@)
-set(@PROJECT_NAME@_CUDA_LINK_OPTIONS @PROJECT_CUDA_LINK_OPTIONS@)
-
 # installed and interface libraries
 set(@PROJECT_NAME@_INSTALLED_LIBRARIES @INSTALL_LIBRARIES@)
 set(@PROJECT_NAME@_INTERFACE_LIBRARIES @INTERFACE_LIBRARIES@)
@@ -60,12 +55,12 @@ endif()
 #------------------------------------------------------------------------------#
 #   Determine install tree or build tree
 #------------------------------------------------------------------------------#
-set(_TIMEMORY_INSTALL_TREE ON)
+set(TIMEMORY_INSTALL_TREE ON)
 if("${CMAKE_SOURCE_DIR}" STREQUAL "@CMAKE_SOURCE_DIR@")
-    set(_TIMEMORY_INSTALL_TREE OFF) # build tree
+    set(TIMEMORY_INSTALL_TREE OFF) # build tree
 endif()
 
-if(_TIMEMORY_INSTALL_TREE)
+if(TIMEMORY_INSTALL_TREE)
 
     set_and_check(@PROJECT_NAME@_INCLUDE_DIR "@PACKAGE_INCLUDE_INSTALL_DIR@")
     set_and_check(@PROJECT_NAME@_LIB_DIR "@PACKAGE_LIB_INSTALL_DIR@")
@@ -184,16 +179,6 @@ endif()
 
 
 #------------------------------------------------------------------------------#
-#   include directories
-#------------------------------------------------------------------------------#
-set(@PROJECT_NAME@_INCLUDE_DIRS ${@PROJECT_NAME@_INCLUDE_DIR})
-set(@PROJECT_NAME@_EXTERNAL_INCLUDE_DIRS "@EXTERNAL_INCLUDE_DIRS@")
-
-foreach(_DIR ${@PROJECT_NAME@_EXTERNAL_INCLUDE_DIRS})
-    list(APPEND @PROJECT_NAME@_INCLUDE_DIRS ${_DIR})
-endforeach()
-
-#------------------------------------------------------------------------------#
 #   Interface
 #------------------------------------------------------------------------------#
 foreach(_LANG ${TIMEMORY_LANGUAGES})
@@ -274,6 +259,14 @@ endif()
 
 
 #------------------------------------------------------------------------------#
+#   components for install tree
+#------------------------------------------------------------------------------#
+if(TIMEMORY_INSTALL_TREE)
+    set(@PROJECT_NAME@_COMPONENTS @INSTALL_LIBRARIES@ @INTERFACE_LIBRARIES@)
+endif()
+
+
+#------------------------------------------------------------------------------#
 #   find_package variables
 #------------------------------------------------------------------------------#
 include(FindPackageHandleStandardArgs)
@@ -281,8 +274,11 @@ include(FindPackageHandleStandardArgs)
 # if all listed variables are TRUE
 find_package_handle_standard_args(@PROJECT_NAME@ DEFAULT_MSG
     @PROJECT_NAME@_ROOT_DIR
+    ${@PROJECT_NAME@_COMPONENTS}
     @PROJECT_NAME@_LIBRARIES)
 
 if(APPLE)
     set(CMAKE_INCLUDE_SYSTEM_FLAG_${LANG} "-isystem ")
 endif(APPLE)
+
+unset(TIMEMORY_INSTALL_TREE)
